(fix) 修复docker nginx服务无法启动问题

--- a/nginx.conf
+++ b/nginx.conf
@@ -4,11 +4,11 @@ server {
 
     location / {
         root /usr/share/nginx/html;
-        index index.html
-        try_files $uri $uri/ /index.html
+        index index.html;
+        try_files $uri $uri/ /index.html;
     }
 
-    location /api/{
+    location /api/ {
         proxy_pass http://backend:3001/api/;
         proxy_set_header Host $host;
 
