--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,7 +11,12 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "element-plus": "^2.9.10",
+    "marked": "^15.0.11",
     "pinia": "^3.0.1",
+    "sass": "^1.89.0",
+    "unplugin-auto-import": "^19.2.0",
+    "unplugin-vue-components": "^28.5.0",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0"
   },
