--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "axios": "^1.9.0",
     "element-plus": "^2.9.10",
     "marked": "^15.0.11",
     "pinia": "^3.0.1",
